# nerv-terminal

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  nerv.py  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
nerv_terminal/: __init__.py  nerv.py  run.py  updater.py
