[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nerv-terminal"
version = "1.0.0"
description = "Neon Genesis Evangelion themed TUI launcher for your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["evangelion", "nerv", "tui", "terminal", "ascii-art", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = ["blessed>=1.20.0"]

[project.scripts]
nerv = "nerv_terminal.nerv:main"

[project.urls]
Homepage = "https://github.com/KotalaKishanReddy/nerv-terminal"
Repository = "https://github.com/KotalaKishanReddy/nerv-terminal"
