[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nerv-terminal"
version = "2.0.0"
description = "Neon Genesis Evangelion themed TUI — NERV HQ in your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["blessed>=1.20", "pycryptodome>=3.18"]

[[project.authors]]
name = "KotalaKishanReddy"

[project.scripts]
nerv = "nerv_terminal.run:main"

[project.urls]
"Homepage" = "https://github.com/KotalaKishanReddy/nerv-terminal"
"Bug Tracker" = "https://github.com/KotalaKishanReddy/nerv-terminal/issues"

[tool.setuptools.packages.find]
include = ["nerv_terminal*"]
